-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b25
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056656 | emb-9 | Unassigned | P4 | Resolved | Fixed | b25 |
| JDK-8063306 | 8u45 | Vladimir Ivanov | P4 | Resolved | Fixed | b01 |
| JDK-8058362 | 8u40 | Vladimir Ivanov | P4 | Resolved | Fixed | b06 |
| JDK-8071042 | emb-8u47 | Vladimir Ivanov | P4 | Resolved | Fixed | team |
See [1] for details.
[1] http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2014-June/014911.html
[1] http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2014-June/014911.html
- backported by
-
JDK-8056656 LogCompilation: C1: inlining tree is flat (no depth is stored)
-
- Resolved
-
-
JDK-8058362 LogCompilation: C1: inlining tree is flat (no depth is stored)
-
- Resolved
-
-
JDK-8063306 LogCompilation: C1: inlining tree is flat (no depth is stored)
-
- Resolved
-
-
JDK-8071042 LogCompilation: C1: inlining tree is flat (no depth is stored)
-
- Resolved
-