8049532: LogCompilation: C1: inlining tree is flat (no depth is stored)

Reviewed-by: roland, iveresov